# CANcept

./: .clang-uml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  can_bus_manager.desktop  cancept.desktop  cancept.gpg  dbc_cyclic_send_chademo.py  resources.qrc  setup.sh  start.sh
.github/workflows/: aur.yml  ci.yml  deb.yml  docs.yml
assets/qss/: light_theme.qss
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/stable/: InRelease  Release  Release.gpg
doc/: Doxyfile.in
doc/res/: coverage.css  coverage.md  custom.css  dbc_format.md  download.md  header.html  mainpage.md  model_json.md  performance.md  testing.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/debian/: control
packaging/reprepro/conf/: distributions
scripts/: add_license_headers.py  coverage_treemap.py  gen_performance_plots.py
src/app_root/: constants.hpp
src/app_root/delegate/: app_root_delegate.cpp  app_root_delegate.hpp
src/app_root/entry_point/: app_root.cpp  app_root.hpp  main.cpp  tab_factory.cpp  tab_factory.hpp
src/app_root/model/: app_root_model.cpp  app_root_model.hpp  settings_model.cpp  settings_model.hpp
src/app_root/service/: settings_service.cpp  settings_service.hpp
src/app_root/view/: app_root_view.cpp  app_root_view.hpp  settings_view.cpp  settings_view.hpp
src/can_handler/: constants.hpp
src/can_handler/can_communication_handler/: can_communication_handler.cpp  can_communication_handler.hpp  can_dbc_handler.cpp  can_dbc_handler.hpp  can_device_handler.cpp  can_device_handler.hpp  can_raw_handler.cpp  can_raw_handler.hpp  i_can_parser.hpp
src/can_handler/dbc_handler/: dbc_handler.cpp  dbc_handler.hpp  dbc_parser.cpp  dbc_parser.hpp  file_parser.cpp  file_parser.hpp
src/can_stream/: can_converter.cpp  can_converter.hpp  can_stream_schema.hpp  constants.hpp  export_type.hpp
src/can_stream/reader/: csv_reader.cpp  csv_reader.hpp  mdf4_reader.cpp  mdf4_reader.hpp
src/can_stream/writer/: csv_writer.cpp  csv_writer.hpp  mdf4_helper.hpp  mdf4_writer.cpp  mdf4_writer.hpp
src/core/: constants.hpp
src/core/delegates/: card_list_delegate.cpp  card_list_delegate.hpp  sidebar_delegate.cpp  sidebar_delegate.hpp
src/core/dto/: can_dto.hpp  dbc_dto.hpp  lifecycle_dto.hpp  replay_dto.hpp  setting_dto.hpp
src/core/enum/: dbc_itemtype.hpp
src/core/event/: can_driver_event.hpp  can_event.hpp  dbc_event.hpp  event.hpp  lifecycle_event.hpp  replay_event.hpp  settings_event.hpp  theme_event.hpp
src/core/interface/: i_can_reader.hpp  i_can_writer.hpp  i_event_broker.hpp  i_fault_handler.hpp  i_lifecycle.hpp  i_manipulation_handler.hpp  i_settings_registry.hpp  i_tab_component.cpp  i_tab_component.hpp
src/core/macro/: console_logging.hpp  theme.hpp
src/core/painters/: item_painter.cpp  item_painter.hpp
src/core/service/: serializer.cpp  serializer.hpp
src/core/theme/: color_themes.hpp  spacing_themes.hpp  style_event.cpp  style_event.hpp  theme_manager.cpp  theme_manager.hpp
src/core/util/: dbc_utils.hpp  log_service.cpp  log_service.hpp  spsc_ring.hpp
src/core/widgets/: card_widget.cpp  card_widget.hpp  dbc_message_card.cpp  dbc_message_card.hpp  dbc_signal_row.cpp  dbc_signal_row.hpp  sidebar.cpp  sidebar.hpp  sidebar_delegate.cpp  sidebar_delegate.hpp  styled_combo_box.cpp  styled_combo_box.hpp  styled_line_edit.cpp  styled_line_edit.hpp  tinted_icon_label.cpp  tinted_icon_label.hpp
src/dbc_file/: constants.hpp  dbc_component.cpp  dbc_component.hpp  dbc_utils.hpp  styles.cpp  styles.hpp
src/dbc_file/delegate/: dbc_delegate.cpp  dbc_delegate.hpp  ecu_tree_delegate.cpp  ecu_tree_delegate.hpp  message_detail_delegate.cpp  message_detail_delegate.hpp  message_table_delegate.cpp  message_table_delegate.hpp  page_delegates.cpp  page_delegates.hpp  signal_table_delegate.cpp  signal_table_delegate.hpp
src/dbc_file/model/: dbc_item.cpp  dbc_item.hpp  dbc_model.cpp  dbc_model.hpp  dbc_roles.hpp
src/dbc_file/util/: util.hpp
src/dbc_file/view/: dbc_view.cpp  dbc_view.hpp  proxies.cpp  proxies.hpp  searchable_filter_widgets.cpp  searchable_filter_widgets.hpp  subviews.cpp  subviews.hpp
src/event_broker/: event_broker.cpp  event_broker.hpp
src/fault_injector/: constants.hpp  styles.cpp  styles.hpp
src/fault_injector/service/: fault_effect_handler.hpp  fault_handler.cpp  fault_handler.hpp  fault_trigger_handler.hpp
src/fault_injector/types/: Fault.hpp  fault.hpp
src/logging/: README.md  constants.hpp  logger.cpp  logger.hpp  logging_component.cpp  logging_component.hpp  styles.cpp  styles.hpp
src/logging/delegate/: logging_delegate.cpp  logging_delegate.hpp
src/logging/model/: logging_detail_proxy.cpp  logging_detail_proxy.hpp  logging_model.cpp  logging_model.hpp  replay_log_parser.cpp  replay_log_parser.hpp
src/logging/view/: logging_view.cpp  logging_view.hpp  message_selection_dialog.cpp  message_selection_dialog.hpp  signal_selection_widget.cpp  signal_selection_widget.hpp
src/logging/worker/: logging_worker.cpp  logging_worker.hpp
src/manipulation/: constants.hpp  styles.cpp  styles.hpp
src/manipulation/service/: manipulation_effect_handler.hpp  (+5 more)
src/math/: constants.hpp
src/monitoring/: constants.hpp  monitoring_component.cpp  monitoring_component.hpp  styles.cpp  styles.hpp
src/sending/: constants.hpp  sending_component.cpp  sending_component.hpp  sending_functions.hpp  styles.cpp  styles.hpp
src/youtube/: youtube_component.cpp  youtube_component.hpp
tests/helpers/: can_test_matchers.hpp  dbc_config_builder.hpp  dbc_examples.hpp  logging_system_helpers.hpp  mock_event_broker.hpp  mock_events.hpp  mock_settings_registry.hpp  mock_tab_component.hpp  setting_definition_builder.hpp  socket_can_device_manager.hpp  temp_dbc_file.hpp  token_builders.hpp
tests/integration/: qt_test_main.cpp
tests/performance/: qt_test_main.cpp
tests/system/: qt_test_main.cpp  test_app_root_system.cpp  test_dbc_system.cpp  test_logging_system.cpp  test_monitoring_system.cpp  test_sending_system.cpp
tests/unit/: qt_test_main.cpp
(+340 files in other folders)
